2008-01-17  Roman Rolinsky  <rolinsky@hartman.femagsoft.com>

	* Revision 0.2.0-1. Implemented "Find Again" command, added
	"params" attribute for CRX manifest file.

2007-10-25  Roman Rolinsky  <rolinsky@hartman.femagsoft.com>

	* Added components for: wxHyperlinkCtrl, wxPropertySheetDialog,
	wxTreeBook. Fixed a number of bugs related to highlighting,
	exiting, etc. Updated documentation.

2007-10-16  Roman Rolinsky  <scroll@lem.lan>

	* Platform-specific sibling modifier key, fixes for "move"
	commands with partial tree flushing.

2007-10-03  Roman Rolinsky  <rolinsky@hartman.femagsoft.com>

	* Added preference option to use FoldPanelBar for component panel.

2007-09-24  Scroll  <scroll@localhost.localdomain>

	* On-line manual has basic usage information, added epydoc
	documentation strings for component classes. Some bugfixes.

2007-08-30  Scroll  <scroll@localhost.localdomain>

	* Updated Preferences dialog (default not used yet, but appearance
	is), fixed implicit attributes page for special types, AUI size set
	correctly, some other fixes.

2007-08-20  Roman Rolinsky  <scroll@lem.local>

	* Umplemented Move Up/Down/Left/Right. Some fixes for control and
	font sizes.

2007-07-29  Roman Rolinsky  <rolinsky@hartman.femagsoft.com>

	* Implemented Code attribute page for defining event
	handlers. Updated pywxrc tool to generate event handler stubs
	delimited by comment lines to protect user-defined code sections.
 
2007-07-21  Scroll  <scroll@localhost.localdomain>

	* Improved highlighting, refactored drop target highlighting and
	drag'n'drop support.

2007-07-13  Scroll  <scroll@localhost.localdomain>

	* Better error messages; working on new highlighting using plugin
	classes.

2007-07-12  Scroll  <scroll@localhost.localdomain>

	* Changed some meta-component details: meta module is imported
	always, but the pulldown menu 'component' command is added only
	with --meta option; added XRCEDPATH scanning for plugins.
