@@ -1,3 +1,7 @@
+2008-02-22  Roman Rolinsky  <rolinsky@hartman.femagsoft.com>
+
+	* Fixes for Cut/Delete undo/redo. Revision 0.2.0-2.
+
 2008-01-17  Roman Rolinsky  <rolinsky@hartman.femagsoft.com>
 
 	* Revision 0.2.0-1. Implemented "Find Again" command, added
